# pypitui

./: .gitignore  .pi  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LLMS.md  README.md  TODO.md  VERIFICATION.md  execution-plan.md  invalidation_analysis.md  pypitui_issue_component_invalidation_v2.md  pyproject.toml  selectlist_wrap_current.txt  terminal_resize_borderedbox_current.md  todo.md
.agents/: test_ultimate_demo.py
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: APPEND_VS_SCROLL.md  ARCHITECTURE.md  RENDER_FLOW.md  SCROLLING_MODEL.md  VT100.md  release.md  scrollback-and-streaming.md  tui-reuse.md
examples/: concise-for-agents.py  demo.py  demo_terminal.py  inputs.py  overlays.py  rich_integration.py  scrollback_demo.py  simple_menu.py  test_colors.py  test_input.py  test_keys.py  test_pypitui_input.py  ultimate_demo.py
prds/: 007-pypitui-core-implementation.md  1-optimal-differential-rendering.md  2-fix-linting-errors.md  execution-plan-007-phase1-terminal.md  execution-plan-007-phase2-rendering.md  execution-plan-007-phase3-components.md  execution-plan-007-phase4-interactive.md  execution-plan-007-phase5-focus.md  execution-plan-007-phase6-overlays.md  execution-plan-007-phase7-rich.md  execution-plan-007-phase8-delivery.md  scrollback-and-streaming.md
scripts/: check-stubs.sh
src/pypitui/: __init__.py  __init__.pyi  box_utils.py  box_utils.pyi  component.py  component.pyi  components.py  components.pyi  keys.py  keys.pyi  mock_terminal.py  mock_terminal.pyi  mouse.py  mouse.pyi  overlay.py  overlay.pyi  rich_components.py  rich_components.pyi  styles.py  styles.pyi  terminal.py  terminal.pyi  tui.py  tui.pyi  utils.py  utils.pyi
src/pypitui/components/: __init__.py  bordered.py  bordered.pyi  container.py  container.pyi  input.py  input.pyi  select.py  select.pyi  text.py  text.pyi
src/pypitui/stubs/pypitui/: components.pyi  keys.pyi  rich_components.pyi  terminal.pyi  tui.pyi  utils.pyi
src/pypitui/stubs/pypitui/stubs/pypitui/: terminal.pyi  tui.pyi
src/pypitui/stubs/pypitui/stubs/pypitui/stubs/pypitui/: keys.pyi  rich_components.pyi
tests/: test_component_invalidation.py  test_components.py  test_input.py  test_keys.py  test_overlay.py  test_pypitui.py  test_scrollback.py  test_scrollback_bug.py  test_scrollback_render.py  test_select_list.py  test_utils.py
tests/integration/: __init__.py  test_differential_rendering.py  test_render_loop.py  test_terminal_tui.py
tests/unit/: test_api.py  test_bordered.py  test_component.py  test_components.py  test_diff_render_efficiency.py  test_focus.py  test_input.py  test_keys.py  test_mouse.py  test_overlay.py  test_select.py  test_styles.py  test_terminal.py  test_tui.py  test_utils.py
