[project]
name = "pypitui"
version = "0.1.0"
description = "A Python TUI library with differential rendering - port of @mariozechner/pi-tui"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = ["tui", "terminal", "ui", "cli", "component"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/user/pypitui"
Repository = "https://github.com/user/pypitui"
Issues = "https://github.com/user/pypitui/issues"

[project.scripts]
# No CLI - this is a library

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.2",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_generics = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/pypitui"]

[tool.hatch.build.targets.wheel.force-include]
"docs" = "pypitui/docs"
"examples" = "pypitui/examples"
"AGENTS.md" = "pypitui/AGENTS.md"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
