[project]
name = "pypitui"
version = "0.2.2"
description = "A Python TUI library with differential rendering - port of @mariozechner/pi-tui"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = ["tui", "terminal", "ui", "cli", "component"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = ["wcwidth>=0.2.13"]

[project.urls]
Homepage = "https://github.com/user/pypitui"
Repository = "https://github.com/user/pypitui"
Issues = "https://github.com/user/pypitui/issues"

[project.scripts]
# No CLI - this is a library

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.2",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 79
extend-exclude = ["*.pyi"]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["E501", "I001"]  # Line too long, unsorted imports in stubs

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "A",      # flake8-builtins
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific
    "C90",    # McCabe complexity
    "PT",     # flake8-pytest-style
    "TCH",    # flake8-type-checking
    "PL",     # Pylint
    "TRY",    # tryceratops
    "PERF",   # Perflint
    "S",      # flake8-bandit (security)
]
ignore = [
    "S101",      # assert used in tests
    "PLR2004",   # magic value comparison (okay in tests)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_generics = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/pypitui"]

[tool.hatch.build.targets.wheel.force-include]
"docs" = "pypitui/docs"
"examples" = "pypitui/examples"
"LLMS.md" = "pypitui/LLMS.md"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
